# Sypherize

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  Makefile  README.md  ROAD_MAP.md  RoadMap.md  code_gen.S  code_gen.s  pre-commit-format.hook  rebuild.sh  run_tests.sh  sypher_grammar.txt  test_all_examples.sh
editor/vim/: README.md
editor/vim/ftdetect/: sypher.vim
example/: one_line.sy  simple.sy  test.cl  test.sy
examples/: arrays.sy  external_funcs.sy  factorial.sy  fibonacci.sy  funcs.sy  funcs2.sy  gcd.sy  if_exprs.sy  math.sy  pointers.sy  simple.sy  test.sy  testing.sy
inc/: ast.h  ast_funcs.h  cmdops.h  code_gen.h  diagnostics.h  env_funcs.h  file_proc.h  frontend.h  helpers.h  lexer.h  llast.h  optimize.h  parser.h  token.h  type_check.h  typechecker.h  utils.h
inc/arch/: platforms.h
llvm/: array.ll  fibonacci.ll
src/: Makefile  ast_decls.cpp  ast_exprs.cpp  ast_funcs.c  ast_prog.cpp  ast_stmts.cpp  ast_types.cpp  cmdops.cpp  code_gen.c  diagnostics.cpp  env_funcs.c  file_proc.c  helpers.c  lexer.c  lexer.cpp  llast.cpp  llast_insns_term.cpp  llast_others.cpp  llast_types.cpp  main.c  main.cpp  optimize.cpp  parser.c  parser.cpp  type_check.c  typechecker.cpp  utils.c
src/arch/: Makefile  platforms.c
tests/: test1.sy  test2.sy
tests/compile/: test1.sy  test2.sy  test3.sy  test4.sy  test5.sy  test6.sy  test7.sy  test8.sy  test9.sy
tests/lexer/: test1.sy  test2.sy
tests/parser/: test1.sy  test2.sy  test3.sy  test4.sy  test5.sy  test6.sy
tests/typecheck/: test1.sy  test2.sy  test4.sy  test5.sy  test6.sy  test7.sy
(+4 files in other folders)
